Assignment with audios n stuff

--- a/assignment0.html
+++ b/assignment0.html
@@ -2,8 +2,40 @@
 <html>
 <head><title>USA Map</title></head>
 <body>
-<p><a href="https://srivaishnavikumbar.github.io">Back to Home</a></p>
+
 <!-- usemap: Specifies an image as a client-side image-map-->
-<img src="USA.jpg" usemap="#usamap"> 
+<img src="USA.png" usemap="#usamap"> 
 <!-- An image-map is an image with clickable areas.-->
 <map name="usamap">
+ <area shape="poly" coords="207,71,389,91,383,227,187,208" alt="Colorado" target="audio" href="audio/Colorado.mp3" />
+ <area shape="poly" coords="389,125,567,131,574,146,585,160,586,232,384,225
+ " alt="Kansas" target="audio" href="audio/Kansas.mp3" />
+ <area shape="poly" coords="357,229,586,237,592,348,518,344,455,319,437,315,438,250,357,243" alt="Oklahoma" target="audio" href="audio/Oklahama.mp3" />
+ <area shape="poly" coords="346,19,342,84,390,88,391,121,564,128,499,35,484,28
+ " alt="Nebraska" target="audio" href="audio/Nebraska.mp3" />
+ <area shape="poly" coords="353,246,340,400,235,393,287,468,327,504,362,477,382,479,442,568,506,620,588,488,602,487,602,355,435,317
+ " alt="Texas" target="audio" href="audio/Texas.mp3" />
+ <area shape="poly" coords="190,213,353,230,338,398,230,398,186,394,183,405,159,403
+ " alt="New Mexico" target="audio" href="audio/New Mexico.mp3" />
+ <area shape="poly" coords="167,3,343,3,337,82,157,61" alt="Wyoming" target="audio" href="audio/Wyoming.mp3" />
+ <area shape="poly" coords="51,188,183,211,158,402,1,331,6,315,30,227,26,213,41,217,50,188" alt="Arizona" target="audio" href="audio/Arizona.mp3" />
+ <area shape="poly" coords="85,18,157,33,154,62,202,72,185,203,53,181" alt="Utah" target="audio" href="audio/Utah.mp3" />
+</map>
+
+<iframe name="audio" style="display:none;"></iframe>
+<h2>10 Inspirational Pages</h2>
+<a href="https://www.bridgew.edu/">Bridgewater State University<br> </a>
+<a href="https://www.utdallas.edu/">University of Texas,Dallas<br> </a>
+<a href="https://www.endnowfoundation.org/">End Now Foundation<br> </a>
+<a href="https://www.amazon.com/">Amazon<br> </a>
+<a href="https://www.walmart.com/">Walmart<br> </a>
+<a href="https://www.netflix.com/">Netflix<br> </a>
+<a href="https://www.aha.video/">Aha Video<br> </a>
+<a href="www.weymouthcommonsapts.com">Weymouth Commons<br> </a>
+<a href="https://www.microsoft.com/en-us/microsoft-365">Microsoft 365<br> </a>
+<a href="https://www.hyundaiusa.com/us/en">Hyundai Usa<br> </a>
+
+<h3>About Me</h3>
+<p>I am Sri Vaishnavi, pursuing master’s in computer science at Bridgewater State University. I have 2+ years of work experience at Global Logic, a Hitachi based company as an Information Management Analyst. I have good academic standing coupled with my passion to help my peers inspired me to take part in organizations like TASK and a non-profit named End Now. I worked as Cyber Rakshak (Digital well-being activist) with the intention to provide digital advocacy, awareness about cyber frauds, social engineering, and cyber-crimes. These foundations gave me plenty of opportunities to present myself and improve my organization and presentation skills.</p>
+</body>
+</html>
